Closed
Bug 1373285
Opened 8 years ago
Closed 8 years ago
Remove telemetry for Keyboard APZ
Categories
(Core :: Panning and Zooming, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla56
Tracking | Status | |
---|---|---|
firefox54 | --- | unaffected |
firefox55 | --- | fixed |
firefox56 | --- | fixed |
People
(Reporter: rhunt, Assigned: rhunt)
References
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
smaug
:
review+
jcristau
:
approval-mozilla-beta+
|
Details |
Per bug 1351783 comment 76, this telemetry probe is no longer needed and should be removed from central and beta.
Updated•8 years ago
|
status-firefox54:
--- → unaffected
status-firefox55:
--- → affected
status-firefox56:
--- → affected
OS: Unspecified → All
Priority: -- → P2
Hardware: Unspecified → All
Version: unspecified → 55 Branch
Comment 1•8 years ago
|
||
Since keyboard APZ won't go into 55, we could just do a wholesale backout of bug 1357880 in 55. That would be relatively straightforward. In 56 I assume the keyboard-apz patches might require part of the machinery added for the telemetry so we'd want a partial backout rather than a full backout.
Assignee | ||
Comment 2•8 years ago
|
||
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #1)
> Since keyboard APZ won't go into 55, we could just do a wholesale backout of
> bug 1357880 in 55. That would be relatively straightforward. In 56 I assume
> the keyboard-apz patches might require part of the machinery added for the
> telemetry so we'd want a partial backout rather than a full backout.
Hmm. So the one thing that might be used in key-apz is a flag added in nsGlobalWindow for MayHaveMouseMoveListeners. Per bug 1351783 comment 72, the flag isn't effective for iframes so I'm not sure whether it will be used. It won't be in the initial landing.
I think I'd like to get it all backed out then, and get that part added back if necessary.
See Also: → 1357880
Comment 3•8 years ago
|
||
Sounds good to me.
Comment hidden (mozreview-request) |
Comment 5•8 years ago
|
||
mozreview-review |
Comment on attachment 8878137 [details]
Bug 1373285 - Remove keyboard apz telemetry probes.
https://reviewboard.mozilla.org/r/149532/#review154108
Attachment #8878137 -
Flags: review?(bugs) → review+
Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f6b101870099
Remove keyboard apz telemetry probes. r=smaug
![]() |
||
Comment 7•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8878137 [details]
Bug 1373285 - Remove keyboard apz telemetry probes.
Approval Request Comment
[Feature/Bug causing the regression]: No regression, unneeded telemetry probe
[User impact if declined]: Potential slight performance regression when adding event listeners to an EventTarget
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Removal of telemtry probe that isn't needed
[String changes made/needed]: None
Attachment #8878137 -
Flags: approval-mozilla-beta?
Assignee | ||
Comment 9•8 years ago
|
||
Requesting beta uplift for removing a telemetry probe that we have all the data for and we didn't plan on letting go to release.
Comment 10•8 years ago
|
||
Comment on attachment 8878137 [details]
Bug 1373285 - Remove keyboard apz telemetry probes.
telemetry probe removal, beta55+
Attachment #8878137 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•8 years ago
|
||
bugherder uplift |
Updated•8 years ago
|
Flags: qe-verify-
You need to log in
before you can comment on or make changes to this bug.
Description
•